clusters/main-configs/seaweedfs/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweedfs-admin
  namespace: seaweedfs
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  hostnames:
  - "seadm.${DNS_NAME}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: seaweedfs-admin
      port: 23646
